Ignore different line endings

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 $ cat .gitattributes
 *.ifcXML linguist-language=XML
 *.ifcXML linguist-detectable=true
+
+# Ignore all differences in line endings
+* -crlf
